Loading component added + collapse bug fix

--- a/src/styles/card.sass
+++ b/src/styles/card.sass
@@ -11,9 +11,11 @@
     margin: 0 2.5% 2.5% 2.5% 
 
     .maskCard
-        background: linear-gradient(180deg, rgba(255,255,255,0%) 0%, rgba(0,0,0,0.5) 95%)
+        background: linear-gradient(0deg, rgba(84,84,84,1) 0%, rgba(255,255,255,0) 37%)
         @include mask
         align-items: flex-end
+        justify-content: center
+        
     
     h2
         font-size: $s-font-size
