--- a/src/styles/collapse.sass
+++ b/src/styles/collapse.sass
@@ -6,6 +6,7 @@
     flex-direction: column
     font-size: $sm-font-size
     margin: 20px
+    justify-content: flex-start
 
     .titleBox
         display: flex
@@ -15,6 +16,7 @@
         color: white
         border-radius: 10px
         padding: 10px
+        
         p
             padding: 0 10px
 
