--- a/src/styles/rental.sass
+++ b/src/styles/rental.sass
@@ -1,5 +1,6 @@
 @import "./Global/main"
     
+
 .rentalArticle
     font-family: "Montserrat"
     padding:0
@@ -51,7 +52,6 @@
     .rentalDescriptions
         display: flex
         justify-content: space-between
-        align-items: center
         width:100%
         .collapse
             width:45%
